--- a/lesson5-sgd-mnist.ipynb
+++ b/lesson5-sgd-mnist.ipynb
@@ -882,9 +882,8 @@
       "source": [
         "- Adam\n",
         "  -  gradient를 계산하기 위해 2가지 방법이 있다.\n",
-        "  - 하나는 정규방정식으로 구하는 방식처럼 derivatives하는 것. \n",
-        "  - (다른 하나는 finite differencing 을 이용하는 것이다. )\n",
-        "  - 이부분이 SGD. 매우 느리다."
+        "  - 하나는 정규방정식으로 구하는 방식처럼 derivatives하는 것. (analytically)\n",
+        "  - 다른 하나는 finite differencing 을 이용하는 것이다. parameter(0.01)를 변경했을 때 error의 차이(바꾸기 전 error-바꾼 후의 error)를 변경해준 값(0.01)로 나눠준다. 매우 느리다."
       ]
     },
     {
@@ -894,7 +893,45 @@
         "colab_type": "text"
       },
       "source": [
-        "- Momentum"
+        "- Momentum\n",
+        "  - sgd with Momentum\n",
+        "  - update를 할 때, derivative *0.1 + same direction *0.9를 해준다. \n",
+        "  - You were here and your learning rate was too small, and you just keep doing the same steps. Or if you keep doing the same steps, then if you also add in the step you took last time, and your steps are going to get bigger and bigger until eventually they go too far. But now, of course, your gradient is pointing the other direction to where your momentum is pointing. So you might just take a little step over here, and then you'll start going small steps, bigger steps, bigger steps, small steps, bigger steps, like that. That's kind of what momentum does.\n",
+        "  - If you're going too far like this which is also slow all, then the average of your last few steps is actually somewhere between the two, isn't it?\n",
+        "  - S = a*grad + (1-a)S_t-1\n",
+        "  - exponentially weighted moving average.\n",
+        "  - [sgd와 momentum](http://aikorea.org/cs231n/neural-networks-3/#sgd) \n",
+        "  - `opt = optim.SGD(model.parameters(), lr, momentum=0.9)`\n",
+        "  "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NjhxcGE9b9wC",
+        "colab_type": "text"
+      },
+      "source": [
+        "- RMSProp\n",
+        "  - RMSProp is very similar to momentum but this time we have an exponentially weighted moving average not of the gradient updates but of F8(de/db) squared - that's the gradient squared\n",
+        "  - grad^2*0.1 + previous value*0.9\n",
+        "  - exponentially weighted moving average of the gradient squared\n",
+        "  - my gradient is really small and consistently really small, this will be a small number. If my gradient is highly volatile, it's going to be a big number. Or if it's just really big all the time, it'll be a big number.\n",
+        "  - when we do an update this time we say weight minus learning rate times gradient divided by the square root of this\n",
+        "  - f our gradient is consistently very small and not volatile, let's take bigger jumps. That's kind of what we want, right? When we watched how the intercept moves so darn slowly, it's like obviously you need to just try to go faster.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S2icZtppe9Gg",
+        "colab_type": "text"
+      },
+      "source": [
+        "- Adam\n",
+        "   - Adam is simply keep track of the exponentially weighted moving average of the gradient squared (RMSProp) and also keep track of the exponentially weighted moving average of my steps (momentum).\n",
+        "   - And both divided by the exponentially weighted moving average of the squared terms and take 0.9 of a step in the same direction as last time. So it's momentum and RMSProp - that's called Adam. "
       ]
     },
     {
@@ -936,6 +973,17 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LM8EEkNpStZZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "  - "
       ]
     },
     {
@@ -1109,7 +1157,14 @@
         "colab": {}
       },
       "source": [
-        "learn.recorder.plot_lr(show_moms=True)"
+        "learn.recorder.plot_lr(show_moms=True)\n",
+        "# y축 : learning rate\n",
+        "# x축 : batch\n",
+        "\n",
+        "# 오른쪽 그래프\n",
+        "# learning rate가 작을 때, momentum이 높다.\n",
+        "# 이는 더 빨리 가는 것을 의미한다.\n",
+        "# learning rate가 더 높을 때는, momentum이 낮아 속도가 낮다."
       ],
       "execution_count": 0,
       "outputs": [
@@ -1126,6 +1181,16 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nxUO6UyyhwmQ",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
