--- a/lesson5-sgd-mnist.ipynb
+++ b/lesson5-sgd-mnist.ipynb
@@ -935,6 +935,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TCyWUFE_j9Ff",
+        "colab_type": "text"
+      },
+      "source": [
+        "- [딥러닝 용어](https://light-tree.tistory.com/140)\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "GamJY_KM5m_q",
