--- a/lesson5-sgd-mnist.ipynb
+++ b/lesson5-sgd-mnist.ipynb
@@ -618,7 +618,8 @@
       },
       "source": [
         "- 3과 4의 차이는 0과 4의 차이만큼 완전히 다르다. : 얼마나 가까운지를 MSE를 통해서 계산할 수 없다.\n",
-        "-"
+        "- softmax가 안에 내장되어 있다. fastai가 이미 만들어놓았다 ㅎㅎ\n",
+        "- "
       ]
     },
     {
@@ -1253,6 +1254,29 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1rKDj1qwk5iT",
+        "colab_type": "text"
+      },
+      "source": [
+        "- CrossEntropyLoss\n",
+        "  - mean squared error (\\hat{y}-y)^{2}. That's not a good loss function for us because in our case we have, for MNIST, 10 possible digits and we have 10 activations each with a probability of that digit.\n",
+        "  - 더 맞았을 때는 더 적은 loss\n",
+        "  - 많이 차이날 때는 더 큰 loss를 줄 수 있는 방법이 필요.\n",
+        "  - the sum of all of your one hot encoded variables times all of your activations.\n",
+        "  - So the sum of the one hot encoded times the activations is the same as an if function\n",
+        "  - 이때 Pred(cat) + pred(dog)의 합은 1이 되어야 한다.\n",
+        "  - 1이 안되는 경우, 합이 1이 되게끔 만들어주여야하는데 이 때 이용하는 것이 softmax(correct activation function)\n",
+        "    - all of the activations add up to 1\n",
+        "    - all of the activations are greater than 0\n",
+        "    - all of the activations are less than 1\n",
+        "  - loss의 output값을 e의 지수로 만든 후에, 가중치로 만듬\n",
+        "\n",
+        "  - single label multi-class classification에서, softmax를 activation function으로 사용하고, cross-entropy를 loss로 사용한다. \n"
+      ]
     }
   ]
 }
